--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="hello_world">Hello world!</string>
 	 <string name="title_activity_admin">Admin</string>
 	  <string name="title_activity_signup">Signup</string>
-
+  <string name="title_activity_reset_password">Reset Password</string>
 </resources>
