--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,4 +6,5 @@
 	 <string name="title_activity_admin">Admin</string>
 	  <string name="title_activity_signup">Signup</string>
   <string name="title_activity_reset_password">Reset Password</string>
+      <string name="title_activity_vote">Vote</string>
 </resources>
