--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">MobileVoting</string>
+    <string name="app_name">OfflineVote</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-	 <string name="title_activity_admin">Admin</string>
-	  <string name="title_activity_signup">Signup</string>
-  <string name="title_activity_reset_password">Reset Password</string>
-      <string name="title_activity_vote">Vote</string>
+    <string name="title_activity_admin">Admin</string>
+    <string name="title_activity_vote">Vote</string>
+    <string name="title_activity_end">End</string>
+    <string name="title_activity_count">Result</string>
+    <string name="title_activity_resetuser">Resetuser</string>
+    <string name="title_activity_adduser">Adduser</string>
+    <string name="title_activity_party">Party</string>
+    <string name="title_activity_input">Input</string>
+    <string name="title_activity_elector">Leader</string>
+    <string name="title_activity_setting">Setting</string>
+    <string name="title_activity_reset_password">Reset Password</string>
+    <string name="title_activity_signup">Signup</string>
 </resources>
